<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tk_uwb_ekf</name>
  <version>0.0.0</version>
  <description>UWB EKF localization package</description>
  <maintainer email="takuchanapp@gmail.com">tk</maintainer>
  <license>TODO: License declaration</license>

  <!-- ビルドに必要なツール -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 実行時に必要なROSパッケージ -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <depend>python3-pyqt5</depend>
  <depend>python3-yaml</depend> 

  <!-- テスト用の依存関係 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ナビゲーション用 -->
  <depend>nav2_bringup</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
